# SpmX

./: .gitignore  CMakeLists.txt  README.md  temp.h
include/: SparseMatrix.h  concurrency-utils.h  expressions.h  iterative-solvers.h  linear-solvers.h  mat-mul-impl.h  my-stl.h  my-tiny-blas.h  parallel.h  preconditioners.h  reorderer.h  sparse-matrix-base.h  sparse-matrix.h  sparse-storage.h  spmx-options.h  spmx-types.h  spmx-utils.h  spmx-vector.h  spmx_Vector.h  spmx_options.h  spmx_types.h  spmx_utils.h  task-system.h  type-utils.h
include/SparseCholesky/: elimination-tree.h  simplicial-llt.h
include/sparse-cholesky/: elimination-tree.h  simplicial-cholesky.h  simplicial-llt.h
src/: List.h  Solver.h  SparseMatrix.cpp  mySTL.h  spmx_Vector.cpp
tests/: benchmark-arith.cc  benchmark-solver.cc  benchmark.cpp  spmx-benchmark.cc  test-arith.cc  test-cholesky.cc  test-linear-expr.cc  test-solver.cc  testArithmetic.cpp
